tests/errors/semantic/non_blocking/RETURN_LIST_ELEMENT.py


def f():
    a = [1,2,3]
    b = [a]
    c = b[0]
    return c
